@@ -96,6 +96,7 @@ struct udtOptions
 	bool bPCXCopyMetadata;
 	TCHAR acPDFProfile[64];
 	int iPDFCustomDPI;
+	bool bPDFSkipLayered;
 	bool bPNGCopyMetadata;
 	bool bPNGAllowLossy;
 	bool bTIFFCopyMetadata;
@@ -254,6 +255,7 @@ private: // User declarations
 	bool __fastcall IsEXESFX(const TCHAR *pacFile);
 	bool __fastcall IsZIPSFX(const TCHAR *pacFile);
 	bool __fastcall IsEXEManagedNet(const TCHAR *pacFile);
+	bool __fastcall IsPDFLayered(const TCHAR *pacFile);
 	String __fastcall GetCellValue(String psValue, unsigned int piPos);
 	String __fastcall SetCellFileValue(String psValue);
 	const TCHAR * __fastcall GetOptionCommandLine(void);
